--- a/vercel.json
+++ b/vercel.json
@@ -1,23 +1,10 @@
 {
-     "version": 2,
-     "builds": [
-         {
-             "src": "./src/index.js",
-             "use": "@vercel/node"
-         }
-     ],
-     "routes": [
-         {
-             "src": "/(.*)",
-             "dest": "/src/index.js"
-         },
-         {
-             "handle": "filesystem"
-         },
-         {
-             "src": "/(.*)",
-             "status": 404,
-             "dest": "404.html"
-         }
-     ]
- } 
+    "builds": [
+      { "src": "src/index.ts", "use": "@vercel/node" },
+      { "src": "api/**/*.ts", "use": "@vercel/node" }
+    ],
+    "routes": [
+      { "src": "/api/(.*)", "dest": "/api/$1" }
+    ]
+  }
+  
