--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
     "builds": [
       { "src": "src/index.ts", "use": "@vercel/node" },
-      { "src": "api/**/*.ts", "use": "@vercel/node" }
+    { "src": "src/index.ts", "use": "@vercel/node" }
     ],
     "routes": [
-      { "src": "/api/(.*)", "dest": "/api/$1" }
+        { "src": "/(.*)", "dest": "src/index.ts" }
     ]
   }
   
